# ZKRun

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-image-id.yml
client/: package.json  tsconfig.json
client/src/: index.ts
contracts/: IRiscZeroVerifier.sol  RunVerifier.sol  hardhat.config.ts  package.json
contracts/scripts/: deploy.ts
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: lib.rs
