[package]
name = "zkrun-methods"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bytemuck = { version = "1.15" }
hex = "0.4"

[build-dependencies]
risc0-build = "1.0.0"

[[bin]]
name = "print_image_id"
path = "src/bin/print_image_id.rs"

[package.metadata.risc0]
methods = ["guest"]


