[package]
name = "zkrun-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
minicbor = { version = "0.20", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.10", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "alloc", "arithmetic", "digest"] }
tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }
alloc-no-stdlib = "2.0"
heapless = "0.7"

[features]
default = []

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1


